--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dotenv": "^0.1.3",
     "react-easy-emoji": "^1.8.1",
     "react-headroom": "^3.1.1",
+    "react-icons": "^5.0.1",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "^2.1.3",
